# mag

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  README.md  config.toml  linux_setup.sh
.github/workflows/: copyright.yml  format.yml  linux_build.yml  macos_build.yml  quality_checks.yml  upload_docs.yml  windows_build.yml
benchmarks/: CMakeLists.txt
benchmarks/mag/vector/: vector_2.cpp  vector_3.cpp  vector_4.cpp
docs/: Makefile  config.yaml  requirements.txt  versions.yaml
docs/source/: build_docs.py  conf.py  docs_config.py  index.rst  versions.yaml
docs/source/_templates/: versions.html
docs/source/getting-started/: building.rst  integration.rst  overview.rst  using-mag.rst
docs/source/locale/fr/LC_MESSAGES/: index.mo  index.po  sphinx.mo  sphinx.po
docs/source/locale/fr/LC_MESSAGES/getting-started/: building.mo  building.po  integration.po  overview.po  using-mag.mo  using-mag.po
scripts/: copyright.py
src/: aliases.cppm  concepts.cppm  constants.cppm  mag.cppm  type_defs.cppm  typedefs.hpp
src/core/: concepts.cppm  constants.cppm  mag_core.cppm
src/matrix/: mag_matrix.cppm  matrix.cppm  matrix_3x3.cppm  matrix_4x4.cppm  matrix_nxn.cppm  matrix_ops.cppm
src/simd/: mag_simd.cppm  simd.cppm  simd_abi.cppm  simd_concepts.cppm  simd_ops.cppm  simd_traits.cppm
src/simd/neon/: neon.cppm  neon_ops.cppm  neon_traits.cppm
src/simd/x86/: sse2.cppm  sse3.cppm  sse4_1.cppm  ssse3.cppm  x86_ops.cppm  x86_traits.cppm
src/vector/: mag_vector.cppm  vector.cppm  vector_2.cppm  vector_3.cppm  vector_4.cppm  vector_ops.cppm
tests/: CMakeLists.txt
tests/benchmarks/vector/: benchmark_vectors.cpp
tests/demo/: main.cpp
tests/mag/matrix/: test_matrix_3x3.cpp  test_matrix_4x4.cpp
tests/mag/simd/: test_simd.cpp
tests/mag/vector/: test_vector_2.cpp  test_vector_3.cpp  test_vector_4.cpp
